# cryptonews-scraper

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml  railway.toml
docs/: IMPLEMENTATION.md  README-TESTS.md  target.html
src/: config.py  constants.py  main.py  webdriver.py
src/models/: __init__.py  data_source.py
src/scrapers/: __init__.py  base.py  cryptopanic.py
src/storage/: __init__.py  postgres_storage.py
src/utils/: logger.py  scraping_utils.py
tests/: __init__.py  test_config.py  test_models.py  test_scrapers.py
