[project]
name = "cryptonews-scraper"
version = "0.1.0"
description = "Selenium Standalone Chromiumを使用したRemote WebDriverスクレイピングアプリケーションのテンプレートです。"
readme = "README.md"
authors = [{ name = "Asuma Yamada" }]
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.34.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.13.4",
    "python-dateutil>=2.8.2",
]

[project.scripts]
app = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
 "ruff>=0.12.4",
 "pytest-asyncio>=0.25.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
 "E",  # pycodestyle errors
 "W",  # pycodestyle warnings
 "F",  # pyflakes
 "I",  # isort
 "B",  # flake8-bugbear
 "UP", # pyupgrade
]
fixable = ["ALL"]  # 自動修正可能なルールをすべて有効化
unfixable = []     # 自動修正を無効にするルールはなし

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
